test/tests/errors/error-for-step-not-int.sm
// true
// false
/**/
/**/

program {
    var x = 0;
    for (x = true step 1 until 10) {}
}